Se agrego la vista de Clientes.xhtml con su beanClientes

--- a/Seminario2023/nbproject/project.properties
+++ b/Seminario2023/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Seminario2023
+application.vendor=juanl
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,8 +27,8 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Seminario2023.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar=..\\..\\COMPLEMENTOS\\HIBERNATE 50\\provided\\hibernate-jpa-2.1-api-1.0.0.Final.jar
 file.reference.Seminario2023.jar=dist\\Seminario2023.jar
 includes=**
 jar.compress=false
@@ -36,8 +37,7 @@ javac.classpath=\
     ${libs.jpa2-persistence.classpath}:\
     ${libs.jpa20-persistence.classpath}:\
     ${file.reference.Seminario2023.jar}:\
-    ${libs.mysql.classpath}:\
-    ${file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar}
+    ${libs.mysql.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
