--- a/WebSeminario2023/nbproject/project.properties
+++ b/WebSeminario2023/nbproject/project.properties
@@ -46,7 +46,8 @@ javac.classpath=\
     ${libs.PrimeFaces13.classpath}:\
     ${reference.Seminario2023.jar}:\
     ${libs.hibernate4-support.classpath}:\
-    ${libs.mysql.classpath}
+    ${libs.mysql.classpath}:\
+    ${libs.jpa20-persistence.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
